Mon Dec 19 16:33:15 2011                        Michael Jennings (mej)

Fix POD formatting for =cut directive.
----------------------------------------------------------------------
Wed Dec 21 15:36:09 2011                        Michael Jennings (mej)

Created a single unified wrapper for object properties (i.e., object
member variables and the accessor methods that go with them).
----------------------------------------------------------------------
Thu Dec 22 11:20:14 2011                        Michael Jennings (mej)

Minor syntax fix for =cut.
----------------------------------------------------------------------
Thu Dec 22 14:12:34 2011                        Michael Jennings (mej)

Add static method for retrieving last RetVal.
----------------------------------------------------------------------
Wed Jan 18 15:02:37 2012                        Michael Jennings (mej)

Convert the prop() wrapper method to use the parameter count rather
than references to distinguish between the presence or absence of a
value.  This removes the need for the "UNDEF" hack-around and makes
one-liner wrappers possible.

Add unit tests to illustrate possible techniques for using prop().
The goal is to promote code reuse and cut down on cut-and-pasted
functions and the errors which can result.
----------------------------------------------------------------------
Wed Jan 18 16:10:27 2012                        Michael Jennings (mej)

Rearrange order of prop() parameters to remove need for conditional.
See updated examples in unit tests.
----------------------------------------------------------------------
Wed Jan 18 16:37:49 2012                        Michael Jennings (mej)

Too fancy.  Keep the simple cases simple.  Only accept a single
scalar.  Anything more complex (e.g., arrays) can be done using a
custom validator and the existing smart handling of arrays in set().
----------------------------------------------------------------------